--- a/src/ui/compose/ComposePage.css
+++ b/src/ui/compose/ComposePage.css
@@ -1,6 +1,6 @@
 .composer {
-    background-color: #fff;
-    border: #dbdbdb 1px solid;
+    background-color: white;
+    border: var(--gray-light) 1px solid;
     border-radius: 5px;
     margin-top: 1rem;
     margin-bottom: 1rem;
