--- a/src/ui/control/LabelButton.css
+++ b/src/ui/control/LabelButton.css
@@ -1,6 +1,5 @@
 .form-label-button {
-    color: #aaa;
-    background-color: rgba(0, 0, 0, 0);
+    color: var(--gray-medium);
     border-radius: 3px;
     padding-left: 0.3rem;
     padding-right: 0.3rem;
@@ -8,8 +7,8 @@
 }
 
 .form-label-button:hover {
-    background-color: rgba(0, 0, 0, 0.05);
-    color: #888;
+    background-color: var(--highlight);
+    color: var(--gray);
 }
 
 .form-label-button:hover.form-label-button-undo {
