--- a/src/ui/detailedposting/DetailedPostingPage.css
+++ b/src/ui/detailedposting/DetailedPostingPage.css
@@ -1,6 +1,6 @@
 .posting-not-found {
-    background-color: #fff;
-    border: #dbdbdb 1px solid;
+    background-color: white;
+    border: var(--gray-light) 1px solid;
     border-radius: 5px;
     margin-top: 1rem;
     margin-bottom: 1rem;
@@ -10,10 +10,10 @@
 
 .posting-not-found .icon {
     margin-right: 1.2rem;
-    color: #96d6e0;
+    color: var(--cyan-light);
 }
 
 .posting-not-found .message {
     font-size: large;
-    color: #808080;
+    color: var(--gray);
 }
