--- a/src/ui/mainmenu/logo/Logo.css
+++ b/src/ui/mainmenu/logo/Logo.css
@@ -1,5 +1,5 @@
 #logo {
-    border-right: solid rgba(255, 255, 255, 0.5) 1px;
+    border-right: solid var(--status-icon) 1px;
     margin-right: 1rem;
     padding-right: 1rem;
 }
