--- a/src/ui/posting/Posting.css
+++ b/src/ui/posting/Posting.css
@@ -1,7 +1,7 @@
 .posting {
     position: relative;
-    background-color: #fff;
-    border: #dbdbdb 1px solid;
+    background-color: white;
+    border: var(--gray-light) 1px solid;
     border-radius: 5px;
     margin-top: 1rem;
     margin-bottom: 1rem;
