--- a/src/ui/posting/PostingButton.css
+++ b/src/ui/posting/PostingButton.css
@@ -6,6 +6,7 @@
     padding: 0.3rem;
     margin-right: 0.3rem;
     cursor: pointer;
+    font-size: 1.3rem;
 }
 
 .posting-button:hover {
@@ -15,4 +16,5 @@
 .posting-button .caption {
     margin-left: 0.4rem;
     font-weight: 600;
+    font-size: 1rem;
 }
