--- a/src/ui/colors.css
+++ b/src/ui/colors.css
@@ -5,11 +5,14 @@
     --cyan-light: #96d6e0;
     --gray-light: #ced4da;
     --gray-medium: #a9a9a9;
+    --green-light: #42D042; /* forest green + 20% lighter */
+    --red-light: #DF5A5A; /* fire brick + 20% lighter */
+
     --verifying: var(--cyan);
     --correct: forestgreen;
     --incorrect: var(--red);
-    --correct-light: #42D042; /* forest green + 20% lighter */
-    --incorrect-light: #DF5A5A; /* fire brick + 20% lighter */
+    --correct-light: var(--green-light);
+    --incorrect-light: var(--red-light);
     --node-name: #385898;
 
     --status-icon: rgba(255, 255, 255, .5);
