--- a/src/ui/colors.css
+++ b/src/ui/colors.css
@@ -5,8 +5,9 @@
     --cyan-light: #96d6e0;
     --gray-light: #ced4da;
     --gray-medium: #a9a9a9;
-    --green-light: #42D042; /* forest green + 20% lighter */
-    --red-light: #DF5A5A; /* fire brick + 20% lighter */
+    --green-light: #42d042; /* forest green + 20% lighter */
+    --red-light: #df5a5a; /* fire brick + 20% lighter */
+    --white-dark: #fafafa;
 
     --verifying: var(--cyan);
     --correct: forestgreen;
