--- a/src/ui/posting/PostingButton.css
+++ b/src/ui/posting/PostingButton.css
@@ -7,6 +7,8 @@
     margin-right: 0.3rem;
     cursor: pointer;
     font-size: 1.3rem;
+    background-color: transparent;
+    border: none;
 }
 
 .posting-button:hover {
