Show error message for 10s or until close button is clicked.

--- a/src/ui/error/ErrorPane.css
+++ b/src/ui/error/ErrorPane.css
@@ -3,6 +3,10 @@
     z-index: 1070;
 }
 
+.error-pane .close {
+    margin-left: 1rem;
+}
+
 .error-pane.error-pane-visible {
     visibility: visible;
     top: 0;
