Special background color for quoting.

--- a/src/ui/colors.css
+++ b/src/ui/colors.css
@@ -14,6 +14,7 @@
     --correct-light: var(--green-light);
     --incorrect-light: var(--red-light);
     --node-name: #385898;
+    --blockquote: #fafaff;
 
     --status-icon: rgba(255, 255, 255, .5);
     --status-icon-highlight: rgba(255, 255, 255, .75);
