--- a/src/ui/mainmenu/connectionstatus/HomeName.css
+++ b/src/ui/mainmenu/connectionstatus/HomeName.css
@@ -6,6 +6,19 @@
     font-weight: bold;
 }
 
+#connection-status .home-name::after {
+    display: inline-block;
+    margin-left: .255em;
+    vertical-align: .255em;
+    content: "";
+    border-top: .3em solid;
+    border-right: .3em solid transparent;
+    border-bottom: 0;
+    border-left: .3em solid transparent;
+    position: relative;
+    top: 0.1em;
+}
+
 #connection-status .home-name.anonymous {
     font-weight: normal;
     font-style: italic;
