Display list of connections and handle opening a new connection when preserving an existing one.

--- a/src/ui/mainmenu/connections/ConnectionsButton.css
+++ b/src/ui/mainmenu/connections/ConnectionsButton.css
@@ -1,5 +1,19 @@
 #connections .connection {
     padding: 0.5em;
+    cursor: pointer;
+}
+
+#connections .connection.active {
+    cursor: auto;
+    border-left: 3px solid var(--green-light);
+}
+
+#connections .connection:hover {
+    background-color: var(--highlight);
+}
+
+#connections .connection.active:hover {
+    background-color: transparent;
 }
 
 #connections .connection .node-name {
