Background highlight for current connection in the list of connections.

--- a/src/ui/colors.css
+++ b/src/ui/colors.css
@@ -2,6 +2,7 @@
     --body-background: #e9ebee;
     --highlight: rgba(0, 0, 0, .05);
     --highlight-blue: rgba(0, 123, 255, .1);
+    --highlight-cyan: #f0fafa;
     --cyan-light: #96d6e0;
     --gray-light: #ced4da;
     --gray-medium: #a9a9a9;
