--- a/src/ui/mainmenu/connections/ConnectionsButton.css
+++ b/src/ui/mainmenu/connections/ConnectionsButton.css
@@ -1,4 +1,9 @@
+#connections .connection-item {
+    display: flex;
+}
+
 #connections .connection {
+    flex: auto;
     padding: 0.5em;
     cursor: pointer;
 }
@@ -39,4 +44,35 @@
 
 #connections .connection-add:hover {
     background-color: var(--highlight);
+}
+
+#connections .connection-buttons {
+    flex: none;
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    margin: 0.5em;
+}
+
+#connections .connection-buttons .link {
+    display: block;
+    flex: none;
+    color: var(--gray-medium);
+    font-size: 1.1em;
+}
+
+#connections .connection-buttons .link:hover {
+    color: var(--primary);
+}
+
+#connections .connection-buttons .disconnect {
+    flex: none;
+    color: var(--gray-medium);
+    cursor: pointer;
+    font-size: 1.3em;
+    margin-top: 0.2em;
+}
+
+#connections .connection-buttons .disconnect:hover {
+    color: var(--red);
 }
