justify-content: start has mixed support, using flex-start instead.

--- a/src/ui/mainmenu/connections/ConnectionsButton.css
+++ b/src/ui/mainmenu/connections/ConnectionsButton.css
@@ -50,7 +50,7 @@
     flex: none;
     display: flex;
     flex-direction: column;
-    justify-content: start;
+    justify-content: flex-start;
     margin: 0.5em;
 }
 
