--- a/src/ui/feed/FeedPageHeader.css
+++ b/src/ui/feed/FeedPageHeader.css
@@ -2,14 +2,15 @@
     position: sticky;
     top: 2.7rem;
     display: flex;
+    justify-content: space-between;
     background-color: var(--body-background);
     padding-top: 0.5rem;
     border-bottom: var(--gray-light) 1px solid;
     z-index: 1010;
 }
 
-#feed-header H2 {
-    margin-right: 3rem;
+#feed-buttons {
+    display: flex;
 }
 
 .feed-btn {
