--- a/src/ui/instant/InstantStory.css
+++ b/src/ui/instant/InstantStory.css
@@ -3,10 +3,21 @@
     color: black;
     border-top: 1px solid #e8e8e8;
     text-decoration: none;
-    padding: 0.5rem 0.75rem;
-    min-height: 6em;
+    padding: 0.2rem 0.5rem 1.7rem 0.5rem;
+    min-height: 7em;
+    position: relative;
 }
 
 #instants .instant:hover {
     background-color: var(--highlight);
+}
+
+#instants .instant .footer {
+    position: absolute;
+    bottom: 0.2rem;
+}
+
+#instants .instant .date {
+    color: var(--gray-medium);
+    margin-left: 0.5em;
 }
