Highlight instants/connections button when the popup is active.

--- a/src/ui/mainmenu/connections/HomeName.css
+++ b/src/ui/mainmenu/connections/HomeName.css
@@ -7,6 +7,10 @@
     cursor: pointer;
 }
 
+#connection-status .active .home-name {
+    color: white;
+}
+
 #connection-status .home-name::after {
     display: inline-block;
     margin-left: .255em;
