--- a/src/ui/mainmenu/connectionstatus/ConnectionStatus.css
+++ b/src/ui/mainmenu/connectionstatus/ConnectionStatus.css
@@ -23,6 +23,10 @@
     color: white;
 }
 
+#connection-status .active .connection-button {
+    color: white;
+}
+
 #connection-status .loading {
     color: white;
     fill: white !important;
