--- a/src/ui/mainmenu/connectionstatus/ConnectionStatus.css
+++ b/src/ui/mainmenu/connectionstatus/ConnectionStatus.css
@@ -12,6 +12,8 @@
     color: var(--status-icon);
     margin: 0.3rem;
     font-size: 150%;
+    position: relative;
+    top: 0.15rem;
 }
 
 #connection-status .connection-button:hover {
