Vertical menu for mobile clients.

--- a/src/ui/mainmenu/connectionstatus/ConnectionStatus.css
+++ b/src/ui/mainmenu/connectionstatus/ConnectionStatus.css
@@ -1,5 +1,12 @@
 #connection-status {
     color: white;
+    display: none;
+}
+
+@media (min-width:768px) {
+    #connection-status {
+        display: block;
+    }
 }
 
 #connection-status BUTTON {
