Pointer cursor when hovering the trashcan button in Drafts.

--- a/src/ui/compose/ComposeDraftSelector.css
+++ b/src/ui/compose/ComposeDraftSelector.css
@@ -34,6 +34,7 @@
     flex: none;
     visibility: visible;
     color: var(--red-light);
+    cursor: pointer;
 }
 
 .draft-selector .dropdown-item:hover .delete:hover {
