Loading general subscribers/subscriptions info.

--- a/src/ui/people/PeopleTabs.css
+++ b/src/ui/people/PeopleTabs.css
@@ -13,7 +13,8 @@
 }
 
 .people-tabs .tab:hover {
-    color: black;
+    color: var(--gray-dark);
+    border-bottom: solid .25rem var(--gray-dark);
 }
 
 .people-tabs .tab.active {
