--- a/src/ui/mainmenu/connectionstatus/NewsButton.css
+++ b/src/ui/mainmenu/connectionstatus/NewsButton.css
@@ -13,3 +13,7 @@
     padding-left: 0.2rem;
     padding-right: 0.2rem;
 }
+
+#connection-status .news-button.connection-button.active {
+    cursor: pointer;
+}
