Highlight number of reactions and comments.

--- a/src/ui/colors.css
+++ b/src/ui/colors.css
@@ -19,4 +19,8 @@
 
     --status-icon: rgba(255, 255, 255, .5);
     --status-icon-highlight: rgba(255, 255, 255, .75);
+
+    --reactions-positive: #e9fce5;
+    --reactions-negative: #feeff0;
+    --comments: #f0f4ff;
 }
