--- a/src/ui/posting/PostingButton.css
+++ b/src/ui/posting/PostingButton.css
@@ -1,7 +1,8 @@
-.posting-button {
+.posting-button, A.posting-button{
     flex: auto;
     max-width: 225px;
     text-align: center;
+    text-decoration: none;
     color: var(--gray-dark);
     padding: 0.3rem;
     margin-right: 0.3rem;
@@ -11,7 +12,7 @@
     border: none;
 }
 
-.posting-button:hover {
+.posting-button:hover, A.posting-button:hover {
     background-color: var(--highlight);
 }
 
