Loading comments by click and displaying them somehow.

--- a/src/ui/colors.css
+++ b/src/ui/colors.css
@@ -23,4 +23,7 @@
     --reactions-positive: #e9fce5;
     --reactions-negative: #feeff0;
     --comments: #f0f4ff;
+
+    --link: var(--blue);
+    --link-hover: #0056b3;
 }
