Adding decoration to comments.

--- a/src/ui/comment/CommentsSentinel.css
+++ b/src/ui/comment/CommentsSentinel.css
@@ -2,6 +2,8 @@
     color: var(--link);
     cursor: pointer;
     text-decoration: none;
+    background-color: transparent;
+    border: none;
 }
 
 .comments-sentinel:hover {
