--- a/src/ui/comment/Comment.css
+++ b/src/ui/comment/Comment.css
@@ -1,7 +1,6 @@
-.posting {
+.comment {
     position: relative;
-    background-color: white;
-    border: var(--gray-light) 1px solid;
+    background-color: var(--comments);
     border-radius: 5px;
     margin-bottom: 1rem;
     padding: 0.5rem;
