--- a/src/ui/comment/Comment.css
+++ b/src/ui/comment/Comment.css
@@ -1,7 +1,10 @@
 .comment {
     position: relative;
+    margin-bottom: 1rem;
+}
+
+.comment .content {
     background-color: var(--comments);
     border-radius: 5px;
-    margin-bottom: 1rem;
     padding: 0.5rem;
 }
