--- a/src/ui/comment/Comment.css
+++ b/src/ui/comment/Comment.css
@@ -1,12 +1,12 @@
 .comment {
     position: relative;
-    margin-bottom: 1rem;
+    margin-bottom: .5rem;
 }
 
 .comment .content {
     background-color: var(--comments);
     border-radius: 5px;
-    padding: 0.5rem;
+    padding: .5rem;
 }
 
 .comment .content P:last-child {
