--- a/src/ui/comment/Comment.css
+++ b/src/ui/comment/Comment.css
@@ -1,6 +1,6 @@
 .comment {
     position: relative;
-    margin-bottom: .5rem;
+    margin: 0 1rem .5rem 1rem;
 }
 
 .comment .content {
@@ -11,4 +11,12 @@
 
 .comment .content P:last-child {
     margin-bottom: 0;
+}
+
+.comment .chevron {
+    visibility: hidden;
+}
+
+.comment:hover .chevron {
+    visibility: visible;
 }
