Dashed border around the focused comment.

--- a/src/ui/comment/Comment.css
+++ b/src/ui/comment/Comment.css
@@ -9,6 +9,10 @@
     padding: .5rem;
 }
 
+.comment.focused .content {
+    border: dashed 1px var(--primary);
+}
+
 .comment .content P:last-child {
     margin-bottom: 0;
 }
