Lighter background color for comments.

--- a/src/ui/colors.css
+++ b/src/ui/colors.css
@@ -22,7 +22,7 @@
 
     --reactions-positive: #e9fce5;
     --reactions-negative: #feeff0;
-    --comments: #f0f4ff;
+    --comments: #f8faff;
 
     --link: var(--blue);
     --link-hover: #0056b3;
