--- a/src/ui/posting/Entry.css
+++ b/src/ui/posting/Entry.css
@@ -28,11 +28,11 @@
     max-width: min(900px - 3.5rem, 100vw - 4rem);
 }
 
-details.spoiler {
+.entry .content DETAILS.spoiler {
     display: inline;
 }
 
-details.spoiler summary {
+.entry .content DETAILS.spoiler SUMMARY {
     display: inline;
     background-color: black;
     color: white;
@@ -42,6 +42,6 @@ details.spoiler summary {
     padding: .2em;
 }
 
-details.spoiler[open] summary {
+.entry .content DETAILS.spoiler[open] SUMMARY {
     display: none;
 }
