Displaying reaction totals in comments.

--- a/src/ui/colors.css
+++ b/src/ui/colors.css
@@ -22,6 +22,8 @@
 
     --reactions-positive: #e9fce5;
     --reactions-negative: #feeff0;
+    --reactions-positive-border: #cddfc9;
+    --reactions-negative-border: #e1d3d4;
     --comments: #f8faff;
 
     --link: var(--blue);
