Showing comment reactions list.

--- a/src/ui/comment/Comment.css
+++ b/src/ui/comment/Comment.css
@@ -28,5 +28,5 @@
 .comment .reactions-line {
     display: flex;
     justify-content: space-between;
-    align-items: start;
+    align-items: flex-start;
 }
